--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.513.0",
+    "mongoose": "^8.16.3",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
