--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "ngrok": "^5.0.0-beta.2",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
